Expand API Key and Token Service usage stats
This adds new stats to the _xpack/usage API for the token service and
API key service.

The new stats are:
- Number tokens / API Keys
- Number of invalidated tokens / API Keys
- Time since last expiry/cleanup process
- Min & Max creation time